--- a/d[1]-dth.html
+++ b/d[1]-dth.html
@@ -30,50 +30,95 @@
             </p>
             <div class="jumbotron">
                 <h1>DRUPAL[1] - Drupal theme layer</h1>
-                <p>Пример пути d[1]-dth-dth[1]</p>
-                <p>Создать дочерню тему</p>
-                <p>Добавит подфайлы к теме</p>
-                <p>Проверить наследование препроцессов</p>
+                <p>Example path - d[№]-dth-dth[№]</p>
+                <p>Example commit - d[№][dth][dth№][tasknumber][description]</p>
+                <p>Example menu route - d[№][dth№][tasknumber]</p>
+                <p></p>
             </div>
             <div class="row">
                 <div class="col-6 col-lg-4">
-                    <h2>Задание 1-№42 - Подтема для темы</h2>
+                    <h2>Task d[1][dth][1]</h2>
                     <p>
                     <ul>
-                        <li>Создать тему</li>
-                        <li>Создать дочерню тему</li>
-                        <li>Добавит подфайлы к теме</li>
-                        <li>Проверить наследование препроцессов</li>
+                        <li>Main review</li>
+                        <li>Read documentation</li>
+                        <li>Create plan</li>
+                        <li>Feedback</li>
                     </ul>
                     </p>
 
-                    <p><a class="btn btn-secondary" href="/theme_l1_subtheme_task1" role="button">Смотреть результат &raquo;</a></p>
-                    <p><button type="button" class="btn btn-info">Смотреть пример в коде</button></p>
+                    <p><a class="btn btn-secondary" href="/theme_l1_subtheme_task1" role="button">Show result &raquo;</a></p>
+                    <p><button type="button" class="btn btn-info">Show code</button></p>
                 </div><!--/span-->
                 <div class="col-6 col-lg-4">
-                    <h2>Heading</h2>
-                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                    <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+                    <h2>Task d[1][dth][1]</h2>
+                    <p>
+                    <ul>
+                        <li>Main review</li>
+                        <li>Read documentation</li>
+                        <li>Create plan</li>
+                        <li>Feedback</li>
+                    </ul>
+                    </p>
+
+                    <p><a class="btn btn-secondary" href="/theme_l1_subtheme_task1" role="button">Show result &raquo;</a></p>
+                    <p><button type="button" class="btn btn-info">Show code</button></p>
                 </div><!--/span-->
                 <div class="col-6 col-lg-4">
-                    <h2>Heading</h2>
-                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                    <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+                    <h2>Task d[1][dth][1]</h2>
+                    <p>
+                    <ul>
+                        <li>Main review</li>
+                        <li>Read documentation</li>
+                        <li>Create plan</li>
+                        <li>Feedback</li>
+                    </ul>
+                    </p>
+
+                    <p><a class="btn btn-secondary" href="/theme_l1_subtheme_task1" role="button">Show result &raquo;</a></p>
+                    <p><button type="button" class="btn btn-info">Show code</button></p>
                 </div><!--/span-->
                 <div class="col-6 col-lg-4">
-                    <h2>Heading</h2>
-                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                    <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+                    <h2>Task d[1][dth][1]</h2>
+                    <p>
+                    <ul>
+                        <li>Main review</li>
+                        <li>Read documentation</li>
+                        <li>Create plan</li>
+                        <li>Feedback</li>
+                    </ul>
+                    </p>
+
+                    <p><a class="btn btn-secondary" href="/theme_l1_subtheme_task1" role="button">Show result &raquo;</a></p>
+                    <p><button type="button" class="btn btn-info">Show code</button></p>
                 </div><!--/span-->
                 <div class="col-6 col-lg-4">
-                    <h2>Heading</h2>
-                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                    <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+                    <h2>Task d[1][dth][1]</h2>
+                    <p>
+                    <ul>
+                        <li>Main review</li>
+                        <li>Read documentation</li>
+                        <li>Create plan</li>
+                        <li>Feedback</li>
+                    </ul>
+                    </p>
+
+                    <p><a class="btn btn-secondary" href="/theme_l1_subtheme_task1" role="button">Show result &raquo;</a></p>
+                    <p><button type="button" class="btn btn-info">Show code</button></p>
                 </div><!--/span-->
                 <div class="col-6 col-lg-4">
-                    <h2>Heading</h2>
-                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                    <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+                    <h2>Task d[1][dth][1]</h2>
+                    <p>
+                    <ul>
+                        <li>Main review</li>
+                        <li>Read documentation</li>
+                        <li>Create plan</li>
+                        <li>Feedback</li>
+                    </ul>
+                    </p>
+
+                    <p><a class="btn btn-secondary" href="/theme_l1_subtheme_task1" role="button">Show result &raquo;</a></p>
+                    <p><button type="button" class="btn btn-info">Show code</button></p>
                 </div><!--/span-->
             </div><!--/row-->
         </div><!--/span-->
@@ -94,7 +139,7 @@
         </div><!--/span-->
 
         <div class="jumbotron">
-            <h1>Докуметация и полезные ссылки</h1>
+            <h1>Documents and related links</h1>
             <p><a href="https://www.drupal.org/docs/7/theming/overview-of-theme-files">https://www.drupal.org/docs/7/theming/overview-of-theme-files</a></p>
             <p>https://www.drupal.org/docs/7/theming/writing-theme-info-files</p>
             <p>https://www.drupal.org/docs/7/theming/default-info-values</p>
@@ -110,7 +155,7 @@
     <hr>
 
     <footer>
-        <p>&copy; Company 2017</p>
+        <p>&copy; Drupal 2017</p>
     </footer>
 
 </div><!--/.container-->
