Add main themes

--- a/index.html
+++ b/index.html
@@ -125,16 +125,37 @@
 
         <div class="col-6 col-md-3 sidebar-offcanvas" id="sidebar">
             <div class="list-group">
-                <a href="d[1]-dth-dth[1].html" class="list-group-item active">1.1 List of template engines, explains concept and understands how the template engines work</a>
-                <a href="#" class="list-group-item">1.2 Registeration and implemention of theme hooks</a>
-                <a href="#" class="list-group-item">1.3 Concept of theme registry</a>
-                <a href="#" class="list-group-item">1.4 Customization of page elements by overriding templates and themable functions</a>
-                <a href="#" class="list-group-item">1.5 Convertion of themable function to dedicated template</a>
-                <a href="#" class="list-group-item">1.6 Work with template variables</a>
-                <a href="#" class="list-group-item">1.7 Overriding core css and js files</a>
-                <a href="#" class="list-group-item">1.8 Concept of Render API</a>
-                <a href="#" class="list-group-item">1.9 Aggregation and minifying of js and css/a>
-                    <a href="#" class="list-group-item">1.10 Change of js and css files weights</a>
+                <a href="d[1]-dth-dth[1].html" class="list-group-item active">Drupal theming</a>
+                <a href="#" class="list-group-item">Drupal DevOps</a>
+                <a href="#" class="list-group-item">Drupal Perfomance</a>
+                <a href="#" class="list-group-item">Drupal testing</a>
+                <a href="#" class="list-group-item">Drupal contribution</a>
+                <a href="#" class="list-group-item">Drupal business areas</a>
+                <a href="#" class="list-group-item">Drupal Date and Time</a>
+                <a href="#" class="list-group-item">Drupal comments</a>
+                <a href="#" class="list-group-item">Drupal files/a>
+                <a href="#" class="list-group-item">Drupal log and reports</a>
+                <a href="#" class="list-group-item">Drupal SEO</a>
+                <a href="#" class="list-group-item">Drupal Views, panels, page manager, Ctools</a>
+                <a href="#" class="list-group-item">Drupal Users</a>
+                <a href="#" class="list-group-item">Drupal Forms</a>
+                <a href="#" class="list-group-item">Drupal Workflow</a>
+                <a href="#" class="list-group-item">Drupal Web Services (server)</a>
+                <a href="#" class="list-group-item">Drupal Search</a>
+                <a href="#" class="list-group-item">Drupal Nodes</a>
+                <a href="#" class="list-group-item">Drupal Fields</a>
+                <a href="#" class="list-group-item">Drupal Entities</a>
+                <a href="#" class="list-group-item">Drupal Security</a>
+                <a href="#" class="list-group-item">Databases</a>
+                <a href="#" class="list-group-item">Modules</a>
+                <a href="#" class="list-group-item">Actions and triggers</a>
+                <a href="#" class="list-group-item">Profile and Distributions</a>
+                <a href="#" class="list-group-item">Queues, Batch API, Cron API</a>
+                <a href="#" class="list-group-item">Content & config interoperatibility</a>
+                <a href="#" class="list-group-item">Drush</a>
+                <a href="#" class="list-group-item">Localization and Translation</a>
+                <a href="#" class="list-group-item">Multi-site drupal</a>
+                <a href="#" class="list-group-item">Drupal Core</a>
             </div>
         </div><!--/span-->
 
