--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <title>Drupal preparation</title>
 
+
     <!-- Bootstrap core CSS -->
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
 
@@ -34,6 +35,8 @@
                 <p>Example commit - d[№][dth][dth№][tasknumber][description]</p>
                 <p>Example menu route - d[№][dth№][tasknumber]</p>
                 <p></p>
+
+                Example second - parent-name-theme-[childtheme№]-[childnametheme][tasknumber]
             </div>
             <div class="row">
                 <div class="col-6 col-lg-4">
@@ -124,7 +127,25 @@
         </div><!--/span-->
 
         <div class="col-6 col-md-3 sidebar-offcanvas" id="sidebar">
+
+            <div class="dropdown">
+                <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                    Other themes
+                    <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                    <li><a href="do[1]-domain.html">Docker</a></li>
+                    <li><a href="#">Drupal 8</a></li>
+                    <li><a href="#">Ansible</a></li>
+                    <li role="separator" class="divider">Vagrant</li>
+                    <li><a href="#">DEV Ops</a></li>
+                </ul>
+            </div>
+
+
+
             <div class="list-group">
+
                 <a href="d[1]-dth-dth[1].html" class="list-group-item active">Drupal theming</a>
                 <a href="#" class="list-group-item">Drupal DevOps</a>
                 <a href="#" class="list-group-item">Drupal Perfomance</a>
