--- a/do[1]-domain-dom[1].html
+++ b/do[1]-domain-dom[1].html
@@ -118,6 +118,21 @@
                 &nbsp;
                 &nbsp;
 
+                <p><span class="alert alert-success" data-toggle="collapse" data-target="#dockerrmi" aria-expanded="false" aria-controls="dockerps"> docker rmi 19d
+</span></p>
+                <div class="collapse" id="dockerrmi">
+                    <div class="card card-body">
+                        # docker rmi 19d<br />
+                        Untagged: debian:wheezy<br/>
+                        Deleted: 19de96c112fcca5b6de16611dc0a359b0b977c551921ca79ac5cf4a8bfff9351<br/>
+                        Deleted: ba249489d0b6512128b60a4910e78fa2000c785d59e0599188a6802bd01155f2                      lonely_meitner <br/>
+                    </div>
+                </div>
+
+
+                <p>Где 19d – первые три цифры ID образа, полученные при помощи docker images.
+
+                    Можно использовать как полный ID – так и только первые три символа.</p>
 
             </div>
 
@@ -130,7 +145,7 @@
                     <h2>Task d[1][dth][1]</h2>
                     <p>
                     <ul>
-                        <li>Main review</li>
+                        <li>Запустить контейнер busybox</li>
                         <li>Read documentation</li>
                         <li>Create plan</li>
                         <li>Feedback</li>
